--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'application'
     id 'jacoco'
     id 'info.solidsoft.pitest' version '1.5.1'
+    id 'org.sonarqube' version '3.0'
 }
 
 repositories {
