--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     testImplementation 'org.assertj:assertj-core:3.16.1'
     testImplementation 'org.mockito:mockito-core:3.3.3'
     testImplementation 'org.mockito:mockito-junit-jupiter:3.3.3'
+    testImplementation 'org.jeasy:easy-random-core:4.2.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
 }
 
@@ -32,6 +33,9 @@ test {
 }
 
 jacocoTestReport {
+    reports {
+        xml.enabled true
+    }
     dependsOn test
 }
 
